--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: cybersecurity profile
-description: Made By: Kemoko B. Traore
+title: Hacker theme
+description: Hacker is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
