--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: [cybersecurity portfolio]
-description: [Made By: Kemoko B. Traore]
+title: Cybersecurity portfolio
+description: Made By: Kemoko B. Traore
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
