--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: [Cybersecurity portfolio]
 description: [Made By Kemoko B. Traore]
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
