--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-layout: default
+layout: jekyll-theme-hacker
 title: [Cybersecurity portfolio]
 description: [Made By Kemoko B. Traore]
 show_downloads: false
