--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
-layout: jekyll-theme-hacker
-title: [Cybersecurity portfolio]
-description: [Made By Kemoko B. Traore]
+title: "Cybersecurity portfolio"
+description: "Made By Kemoko B. Traore"
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-hacker
-link: rel="stylesheet" href="index.css"
